<resources>
    <string name="app_name">DroidTools</string>
    <string name="loginTxt">Login</string>
    <string name="signupTxt">Signup</string>
    <string name="Logo">TODO</string>
    <string name="usernameTxt">username</string>
    <string name="passwordTxt">password</string>
    <string name="not_yet_registered_signup_nowTxt">Not yet registered signup now</string>
    <string name="loginimg">TODO</string>
    <string name="select_menu">SELECT MENU</string>
    <string name="img1">TODO</string>
    <string name="text_to_pdf">Text to Pdf</string>
    <string name="img2">TODO</string>
    <string name="document_scanner">Document Scanner</string>
    <string name="img3">TODO</string>
    <string name="folder_open">Folder Open</string>
    <string name="img4">TODO</string>
    <string name="take_pics">Take pics</string>
    <string name="img5">TODO</string>
    <string name="image_editor">Image Editor</string>
    <string name="img6">TODO</string>
    <string name="quick_note">Quick Note</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="imgbtn">TODO</string>
    <string name="phone_number">phone number</string>
    <string name="e_mail">E mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="droidtools">Droid Tools</string>
    <string name="title">Enter your note title</string>
    <string name="desc">Enter your note Description</string>
    <string name="save_text">SAVE TEXT</string>
    <string name="save_file">Save file</string>
    <string name="share_file">Share File</string>
    <string name="rate_us">Rate us</string>
    <string name="title_activity_navbar">Navbar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="applications">Applications</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="todo">TODO</string>
    <string name="note_add">TODO</string>
    <string name="Demo_Desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="demo_head">Demo Head</string>
    <string name="time_demo">21.02.2002 10:15 pm</string>
    <string name="delete">TODO</string>
    <string name="update">TODO</string>
    <string name="delete_btn">TODO</string>
    <string name="upd">TODO</string>
    <string name="addNote">TODO</string>
    <string name="floatBtn">Add Note</string>
    <string name="update_txt">update</string>
    <string name="delete_txt">Delete</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="convert">Convert</string>
    <string name="image_to_pdf">Image To PDF</string>
    <string name="convert_to_pdf">Convert To Pdf</string>
    <string name="extract_text_will_display">Extract text will display</string>
    <string name="todo2">TODO</string>
</resources>