<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="15dp"
        android:layout_margin="15dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/note_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_head"
                android:textSize="35sp"
                android:textColor="@color/BtnTransparent"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/note_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_demo"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <ScrollView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                >
                <TextView
                    android:id="@+id/note_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Demo_Desc"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />
            </ScrollView>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/update_btn"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="4dp"
                android:background="@drawable/round_corner"
                android:src="@drawable/update_assets"
                android:contentDescription="@string/update_txt" />

            <ImageButton
                android:id="@+id/delete_btn"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@+id/update_btn"
                android:background="@drawable/round_corner"
                android:src="@drawable/delete_assets"
                android:contentDescription="@string/delete_txt" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>