<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sky"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/main_logo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/Logo" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:text="@string/loginTxt"
        android:textColor="@color/white"
        android:backgroundTint="@color/BtnTransparent"
        android:alpha="0.7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />
    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:id="@+id/signup"
        android:text="@string/signupTxt"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        app:cornerRadius="20dp"
        android:alpha="0.7"
        />



</LinearLayout>
